// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`League getLeagueMembers should catch errors and throw them 1`] = `[Error: error]`;

exports[`League getLeagueMembers should get all league members 1`] = `
Array [
  Object {
    "displayName": "string",
    "id": 12345,
    "isLeagueManager": true,
  },
]
`;

exports[`League getLeagueTeams should catch errors and throw them 1`] = `[Error: error]`;

exports[`League getLeagueTeams should get all league teams 1`] = `
Object {
  "abbrev": "CDMD",
}
`;

exports[`League getWeeklyMatchups should catch errors and throw them 1`] = `[Error: error]`;

exports[`League getWeeklyMatchups should get the weekly matchups 1`] = `
Array [
  Object {
    "matchupPeriodId": 1,
  },
]
`;

exports[`League init should catch errors and throw by init 1`] = `[Error: error]`;

exports[`League init should get init team data 1`] = `
League {
  "cookies": Object {
    "espn_s2": "2B7uOaY7pTx8neDj061z24T3PdDPn6a29EHEMEfelzI6HLT43oy1P%%2BUTkzYAsk%2BkxgrK%",
    "swid": "{A11A1111-1AAA-111A-1A11-111AAA111A1A}",
  },
  "fantasyRequests": FantasyRequest {
    "cookies": Object {
      "espn_s2": "2B7uOaY7pTx8neDj061z24T3PdDPn6a29EHEMEfelzI6HLT43oy1P%%2BUTkzYAsk%2BkxgrK%",
      "swid": "{A11A1111-1AAA-111A-1A11-111AAA111A1A}",
    },
    "endpoint": "https://lm-api-reads.fantasy.espn.com/apis/v3/games/flb/seasons/2024/segments/0/leagues/1",
  },
  "hittingScoreStats": Object {
    "R": 1,
  },
  "leagueId": 1,
  "pitchingScoreStats": Object {
    "PTW": 1,
  },
  "positionCounts": Object {
    "1B": 1,
    "1B/3B": 1,
    "2B": 1,
    "2B/SS": 1,
    "3B": 1,
    "??": 0,
    "BE": 4,
    "C": 1,
    "CF": 0,
    "DH": 0,
    "IF": 0,
    "IL": 3,
    "LF": 0,
    "OF": 5,
    "P": 0,
    "RF": 0,
    "RP": 3,
    "SP": 5,
    "SS": 1,
    "UTIL": 1,
  },
  "tradeDeadline": 123412341234124,
}
`;
